--- a/graphics.ipynb
+++ b/graphics.ipynb
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -712,6 +712,9 @@
     "\n",
     "plt.xticks(range(len(filtered_data['Num Threads'])), filtered_data['Num Threads'])\n",
     "plt.grid(axis='y')\n",
+    "\n",
+    "# Guardar la figura\n",
+    "plt.savefig('results_assets/figures/Tiempo total para diferentes números de hilos (con Schedule: guided y ChunkSize: 256).png')\n",
     "\n",
     "# Mostrar el gráfico\n",
     "plt.show()"
